Import Debian changes 3.5b2-19
canna (3.5b2-19) frozen unstable; urgency=high

  * Re-build for "Can't make iroha dictionary because
    I forgot to specified "frozen" at canna_3.5b2-18 package.
    Bugfixed: (Bug#30915)

canna (3.5b2-18) unstable; urgency=low

  * BugFixed: Can't make iroha dictionary.
    This bug made at non-maintainer release.

canna (3.5b2-17) frozen unstable; urgency=low

  * Maintainer release.
  * Modified message when canna server stop. (#JP/576)
  * Modified spell miss in debian/control.

canna (3.5b2-16.1) unstable; urgency=low

  * In dic/ideo/pubdic/pod.c, moved initialization of 'FILE *in1' and
    'FILE *in2' to main().  gcc 2.8.1 complains otherwise, at least
    on netwinder/arm.

canna (3.5b2-16) unstable; urgency=low

  * Added that the libcanna1g-dev depends on libcanna1g. (#JP/551)

canna (3.5b2-15) unstable; urgency=low

  * Changed install directory of Japanese manpages to /usr/man/ja. 
  * Remove "sudo" command in rules. (Bug#25782)
  * Fixed typo "dh=testdir" in rules.
  * Updated Standards-Version 2.4.1.3.
  * Check woth lintian v0.7.4.

--- a/Canna.conf
+++ b/Canna.conf
@@ -333,9 +333,9 @@ ConvertPathName(file.tmp,file.man)					@@\
 ConvertPathName(file.jtmp,file.jmn)					@@\
 install.man:: file.tmp file.jtmp					@@\
 	MakeDir($(DESTDIR)destdir/man$(MANSUFFIX))			@@\
-	MakeDir($(DESTDIR)destdir/ja_JP.ujis/man$(MANSUFFIX))		@@\
+	MakeDir($(DESTDIR)destdir/ja/man$(MANSUFFIX))		@@\
 	$(INSTALL) -c $(INSTMANFLAGS) file.tmp $(DESTDIR)destdir/man$(MANSUFFIX)/dest.$(MANSUFFIX)	@@\
-	$(INSTALL) -c $(INSTMANFLAGS) file.jtmp $(DESTDIR)destdir/ja_JP.ujis/man$(MANSUFFIX)/dest.$(MANSUFFIX)	@@\
+	$(INSTALL) -c $(INSTMANFLAGS) file.jtmp $(DESTDIR)destdir/ja/man$(MANSUFFIX)/dest.$(MANSUFFIX)	@@\
 	$(RM) file.tmp file.jtmp					@@\
 clean::									@@\
 	$(RM) file.tmp file.jtmp
@@ -354,9 +354,9 @@ ConvertPathName(file.tmp,file.man)				@@\
 ConvertPathName(file.jtmp,file.jmn)				@@\
 install.man:: file.tmp file.jtmp				@@\
 	MakeDir($(DESTDIR)destdir/man$(LIBMANSUFFIX))			@@\
-	MakeDir($(DESTDIR)destdir/ja_JP.ujis/man$(LIBMANSUFFIX))	@@\
+	MakeDir($(DESTDIR)destdir/ja/man$(LIBMANSUFFIX))	@@\
 	$(INSTALL) -c $(INSTMANFLAGS) file.tmp $(DESTDIR)destdir/man$(LIBMANSUFFIX)/dest.$(LIBMANSUFFIX)	@@\
-	$(INSTALL) -c $(INSTMANFLAGS) file.jtmp $(DESTDIR)destdir/ja_JP.ujis/man$(LIBMANSUFFIX)/dest.$(LIBMANSUFFIX)	@@\
+	$(INSTALL) -c $(INSTMANFLAGS) file.jtmp $(DESTDIR)destdir/ja/man$(LIBMANSUFFIX)/dest.$(LIBMANSUFFIX)	@@\
 	$(RM) file.tmp file.jtmp					@@\
 clean::									@@\
 	$(RM) file.tmp file.jtmp
