--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: canna
 Section: utils
 Priority: optional
 Maintainer: Yoshiaki Yanagihara <yochi@debian.or.jp>
-Standards-Version: 2.4.0.0
+Standards-Version: 2.4.1.3
 
 Package: canna
 Architecture: any
@@ -21,14 +21,14 @@ Description: A japanese input system (server and dictionary).
  Canna converts kana to kanji based on a client-server model and
  supports automatic kana-to-kanji conversion.
  .
- This packege includes cannaserver program and dictionary files.
+ This package includes cannaserver program and dictionary files.
 
 Package: canna-utils
 Architecture: any
 Depends: ${shlibs:Depends}
 Description: A japanese input system (utility).
  Canna is a Japanese input system available in Free Software.
- This packege includes canna client programs.
+ This package includes canna client programs.
 
 Package: libcanna1g
 Section: libs
@@ -42,6 +42,7 @@ Package: libcanna1g-dev
 Section: devel
 Priority: extra
 Architecture: any
+Depends: libcanna1g
 Conflicts: canna-dev, libcanna1-dev
 Replaces: canna-dev
 Description: Canna Static Library and Headers (Libc6).
