--- a/debian/rules
+++ b/debian/rules
@@ -6,12 +6,10 @@ PWD=$(shell pwd)
 
 build:	build-stamp
 build-stamp:
-	dh=testdir
+	dh_testdir
 
-	## make libc6 version
-	PATH=/usr/bin:/bin:/usr/sbin:/usr/X11R6/bin
-	sudo make clean
-	xmkmf
+	## make libc6 version only.
+	xmkmf -a
 	make Makefile
 	make canna
 
@@ -74,27 +72,27 @@ binary-arch: build
 	# End 
 	#
 	
-	dh_movefiles -a
-	dh_installdocs -a INSTALL INSTALL.jp README README.jp WHATIS WHATIS.jp
-	dh_installexamples -a
+	dh_movefiles
+	dh_installdocs -A README.jp README INSTALL INSTALL.jp WHATIS \
+		WHATIS.jp 
+	dh_installexamples
 	dh_undocumented canlisp.1 crfreq.1 crxdic.1 crxgram.1 dpxdic.1\
 		forcpp.1 forsort.1 kpdic.1 mergeword.1 syncdic.1
-	dh_installinit -a
+	dh_installinit
 #	dh_installmenu	
 #	dh_installcron
 #	dh_installmanpages
-	dh_installchangelogs -a CHANGES.jp
-	dh_strip -a 
-	dh_compress -a
-	dh_fixperms -a
+	dh_installchangelogs CHANGES.jp
+	dh_strip
+	dh_compress
+	dh_fixperms
 	dh_suidregister
-	dh_installdeb -a
-	dh_shlibdeps -a 
-	dh_gencontrol -a 
-	dh_makeshlibs -a
-#	dh_du -a
-	dh_md5sums -a 
-	dh_builddeb -a
+	dh_makeshlibs
+	dh_installdeb
+	dh_shlibdeps
+	dh_gencontrol
+	dh_md5sums
+	dh_builddeb
 
 source diff:
 	@echo >&2 'source and diff are obsolete - use dpkg-source -b'; false
