Import Debian changes 3.7p3-2.1
canna (3.7p3-2.1) unstable; urgency=medium

  * Non-maintainer upload.
  * Medium-urgency upload for RC bugfix.
  * Build-Depend on libx11-dev instead of on the obsolete xlibs-dev; thanks
    to Justin Pryzby <justinpryzby@users.sf.net> for the patch.
    Closes: #346613.

--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: canna
 Section: utils
 Priority: optional
 Maintainer: Junichi Uekawa <dancer@debian.org>
-Build-Depends: debhelper (>= 4.1.59), xlibs-dev, xutils, dpatch, po-debconf, autoconf2.13, ptex-bin
+Build-Depends: debhelper (>= 4.1.59), libx11-dev, xutils, dpatch, po-debconf, autoconf2.13, ptex-bin
 Standards-Version: 3.6.2
 
 Package: canna
