Import Debian changes 3.7p3-3.1
canna (3.7p3-3.1) unstable; urgency=low

  * Non-maintainer upload to fix pending l10n issues
  * Fix the dependency on debconf to allow cdebconf transition.
    Closes: #331770
  * Correct English in debconf templates. Closes: #313202, #395979
  * Remove /etc/canna/dics.dir.d/00canna.dics.dir from debian/conffiles
    This was, technically speaking, a FTBFS
  * Lintian fixes, while we're at it:
    - set the debhelper compatibility to 4 with debian/compat
    - use more up-to-date config.{guess|sub} files
      (the way it's done is not the cleanest but the simplest, which is
       the most approrpiate for a NMU)
    - remove /etc/init.d/canna from conffiles and remove that now empty file
      (the file is automatically added to conffiles by debhelper)
    - provide an LSB header to the init script
  * Debconf templates translations:
    - Added Swedish. Closes: #339328
    - Added Portuguese. Closes: #380325
    - Added Spanish. Closes: #334388
    - Added Czech. Sent during the NMU campaign.
    - Added Russian. Sent during the NMU campaign.
    - Updated German. Closes: #396457

--- a/debian/control
+++ b/debian/control
@@ -7,11 +7,11 @@ Standards-Version: 3.6.2
 
 Package: canna
 Architecture: any
-Depends: ${shlibs:Depends}, debconf, adduser (>= 3.34)
+Depends: ${shlibs:Depends}, debconf | debconf-2.0, adduser (>= 3.34)
 Conflicts: canna-server, libcanna1g (<= 3.5b2-33)
 Replaces: canna-server
 Suggests: canna-shion
-Description: A Japanese input system (server and dictionary).
+Description: Japanese input system (server and dictionary)
  Canna is a Japanese input system available in Free Software.
  Canna provides a unified user interface for inputting Japanese.
  .
@@ -29,7 +29,7 @@ Package: canna-utils
 Architecture: any
 Depends: ${shlibs:Depends}
 Conflicts: canna (<= 3.5b2-33), libcanna1g (<= 3.5b2-33)
-Description: A japanese input system (utility).
+Description: Japanese input system (utility)
  Canna is a Japanese input system available in Free Software.
  This package includes canna client programs.
 
