Import Debian changes 3.7p3-6.1
canna (3.7p3-6.1) unstable; urgency=low

  * Non-maintainer upload to fix pending l10n issues.
  * Debconf translations:
    - Finnish. Closes: #469549
    - Swedish. Closes: #490794
    - Turkish. Closes: #491491
    - Basque. Closes: #491886
  * [Lintian] Use "chown foo:bar" instead of "chown foo.bar" in postinst
  * [Lintian] No longer ignore errors by make in the clean target
  * [Lintian] Build-Depends on xutils-dev instead of obsolete xutils

--- a/debian/rules
+++ b/debian/rules
@@ -16,10 +16,10 @@ clean: unpatch
 # No need to run clean
 	dh_testdir
 	dh_testroot
-	-$(MAKE) clean
-	-$(MAKE) distclean
-	-$(MAKE) -C doc/man/guide/tex clean
-	-$(MAKE) -C doc/man/guide/tex distclean
+	[ ! -f Makefile ] || $(MAKE) clean
+	[ ! -f Makefile ] || $(MAKE) distclean
+	[ ! -f doc/man/guide/tex/Makefile ] || $(MAKE) -C doc/man/guide/tex clean
+	[ ! -f doc/man/guide/tex/Makefile ] || $(MAKE) -C doc/man/guide/tex distclean
 
 	# remove created symlinks
 	rm -f doc/intern/canna.sty doc/lisp/canna.sty doc/man/guide/tex/canna.sty doc/misc/canna.sty 
