--- a/debian/config
+++ b/debian/config
@@ -1,8 +1,10 @@
-#!/bin/sh -e
+#!/bin/sh
 
 # Source debconf library.
 . /usr/share/debconf/confmodule
 db_version 2.0
+
+set -e
 
 db_input medium canna/run_cannaserver || true
 db_go
