--- a/debian/rules
+++ b/debian/rules
@@ -35,7 +35,7 @@ binary-indep: build
 binary-arch: build
 	dh_testdir -a
 	dh_testroot -a
-	dh_clean -a -k
+	dh_prep
 	dh_installdirs -a
 
 	make install \
