Import Debian changes 3.7p3-6.5
canna (3.7p3-6.5) unstable; urgency=high

  * Non-maintainer upload.
  * Urgency high due to RC bug fix
  * Fix problem when trying to delete user twice on purge (postrm purge
    might be indeed called twice; see http://lists.debian.org/debian-devel/2002/10/msg00345.html
    for details) (Closes: #579312)
  * Use userdel instead of the non-essential deluser in postrm
  * Include danish debconf template (Closes: #589865)
  * Also fix lintian error on weak library dependency for libcanna1g-dev
    on libcanna1g by version the dependency with (= ${binary:Version})

--- a/debian/control
+++ b/debian/control
@@ -53,7 +53,7 @@ Description: input system for Japanese - runtime library
 Package: libcanna1g-dev
 Section: libdevel
 Architecture: any
-Depends: ${misc:Depends}, libcanna1g
+Depends: ${misc:Depends}, libcanna1g (= ${binary:Version})
 Conflicts: canna-dev, libcanna1-dev, canna (<= 3.5b2-23)
 Replaces: canna-dev
 Description: input system for Japanese - development files
