Import Debian changes 3.7p3-7
canna (3.7p3-7) unstable; urgency=low

  * QA upload.
  * Set the Maintainer field to Debian QA Group (see: #519388)
    Thanks Atsushi Mitsuka <mitsuka@misao.gr.jp> for the previous works.
  * debian/control: bumped Standards-Version: 3.9.2
  * switched to 3.0 (quilt) from 1.0.
    - debian/source/format: 3.0 (quilt)
    - debian/patches/*: converted to quilt from dpatch.
    - debian/control: dropped dpatch from b-d.
  * switched to dh7
    - debian/control: updated debhelper to (>> 7.0.50~) of b-d.
    - do not use dh_movefiles.
      + debian/rules: updated.
      + debian/canna.install: new file.
      + debian/canna-utils.install: renamed from *.files and updated.
      + debian/libcanna1g.install: renamed from *.files and updated.
      + debian/libcanna1g-dev.install: renamed from *.files and updated.
      + debian/postinst: mkdir /var/log/canna before chown.
    - it can handle nostrip build option (Closes: #436616).
    - debian/postrm: remove /etc/canna directory.
  * debian/control: dropped ancient Conflicts/Replaces.
    - canna: C/R: canna-server, libcanna1g (<= 3.5b2-33)
    - canna-utils: C: canna (<= 3.5b2-33), libcanna1g (<= 3.5b2-33)
    - libcanna1g: C: canna (<= 3.5b2-33)
    - libcanna1g-dev: C/R: canna-dev, libcanna1-dev, canna (<= 3.5b2-23)
  * debian/po/nl.po: [INTL:nl] Dutch translaiton updated (Closes: #657008).
    Thanks Jeroen Schot <schot@A-Eskwadraat.nl>.
  * debian/control: add Homepage: and Vcs-* tags.
  * eliminate lintian warning: ancient-autotools-helper-file
    - debian/rules: update and restore canuum's autotools helper files.
  * elimitate lintian warning: debian-watch-file-is-missing
    - debian/watch: new file.
  * eliminate lintian warning: spelling-error-in-{binary,manpages}
    - debian/patches/06_fix_spelling_error.patch: new file.
  * eliminate lintian warning: manpage-has-errors-from-man
    - debian/patches/07_fix_manpages_error.patch: new file.

--- a/debian/control
+++ b/debian/control
@@ -1,15 +1,17 @@
 Source: canna
 Section: utils
 Priority: optional
-Maintainer: Atsushi Mitsuka <mitsuka@misao.gr.jp>
-Build-Depends: debhelper (>= 7), libx11-dev, xutils-dev, dpatch, po-debconf, autoconf2.13, ptex-bin, texlive-latex-recommended
-Standards-Version: 3.6.2
+Maintainer: Debian QA Group <packages@qa.debian.org>
+Build-Depends: debhelper (>> 7.0.50~), libx11-dev, xutils-dev, po-debconf,
+ autoconf2.13, ptex-bin, texlive-latex-recommended, autotools-dev
+Standards-Version: 3.9.2
+Homepage: http://canna.sourceforge.jp/
+Vcs-Git: git://anonscm.debian.org/collab-maint/canna.git
+Vcs-Browser: http://anonscm.debian.org/git/collab-maint/canna.git
 
 Package: canna
 Architecture: any
 Depends: ${misc:Depends}, ${shlibs:Depends}, adduser (>= 3.34)
-Conflicts: canna-server, libcanna1g (<= 3.5b2-33)
-Replaces: canna-server
 Suggests: canna-shion
 Description: input system for Japanese - server and dictionary
  Canna provides a unified user interface for Japanese input. It is based
@@ -24,7 +26,6 @@ Description: input system for Japanese - server and dictionary
 Package: canna-utils
 Architecture: any
 Depends: ${misc:Depends}, ${shlibs:Depends}
-Conflicts: canna (<= 3.5b2-33), libcanna1g (<= 3.5b2-33)
 Description: input system for Japanese - utilities
  Canna provides a unified user interface for Japanese input. It is based
  on a client-server model and supports automatic kana-to-kanji conversion.
@@ -39,7 +40,6 @@ Package: libcanna1g
 Section: libs
 Architecture: any
 Depends: ${misc:Depends}, ${shlibs:Depends}
-Conflicts: canna (<= 3.5b2-33)
 Description: input system for Japanese - runtime library
  Canna provides a unified user interface for Japanese input. It is based
  on a client-server model and supports automatic kana-to-kanji conversion.
@@ -54,8 +54,6 @@ Package: libcanna1g-dev
 Section: libdevel
 Architecture: any
 Depends: ${misc:Depends}, libcanna1g (= ${binary:Version})
-Conflicts: canna-dev, libcanna1-dev, canna (<= 3.5b2-23)
-Replaces: canna-dev
 Description: input system for Japanese - development files
  Canna provides a unified user interface for Japanese input. It is based
  on a client-server model and supports automatic kana-to-kanji conversion.
