--- a/debian/control
+++ b/debian/control
@@ -3,11 +3,11 @@ Section: utils
 Priority: optional
 Maintainer: Debian QA Group <packages@qa.debian.org>
 Build-Depends: debhelper (>> 7.0.50~), libx11-dev, xutils-dev, po-debconf,
- autoconf2.13, ptex-bin, texlive-latex-recommended, autotools-dev
+ autoconf2.13, texlive-lang-cjk, texlive-latex-recommended, autotools-dev
 Standards-Version: 3.9.2
 Homepage: http://canna.sourceforge.jp/
 Vcs-Git: git://anonscm.debian.org/collab-maint/canna.git
-Vcs-Browser: http://anonscm.debian.org/git/collab-maint/canna.git
+Vcs-Browser: http://anonscm.debian.org/gitweb/?p=collab-maint/canna.git
 
 Package: canna
 Architecture: any
