Import Debian changes 3.7p3-12
canna (3.7p3-12) unstable; urgency=low

  * QA upload.
  * enable hardening.
    - debian/rules: add dpkg-buildflags.
    - debian/patches/09_fix_format_security.patch: new file.
  * debian/patches/10_fix_manpages_error.patch: new file.
  * lintian-overrides: binary-without-manpage and spelling-error-in-binary
    - debian/canna-utils.lintian-overrides: new file.
    - debian/canna.lintian-overrides: new file.
    - debian/libcanna1g.lintian-overrides: new file.
  * debian/libcanna1g.symbols: new file.
  * bumped Standards-Version to 3.9.4.

--- a/debian/rules
+++ b/debian/rules
@@ -33,7 +33,11 @@ override_dh_auto_build:
 	done
 	./mkrelease.sh && xmkmf
 	cd doc/man/guide/tex && xmkmf
-	$(MAKE) canna
+	$(MAKE) canna \
+		CDEBUGFLAGS="-g -Wall" \
+		CCOPTIONS="$$(dpkg-buildflags --get CFLAGS) $$(dpkg-buildflags --get CPPFLAGS)" \
+		LOCAL_LDFLAGS="$$(dpkg-buildflags --get LDFLAGS)" \
+		SHLIBGLOBALSFLAGS="$$(dpkg-buildflags --get LDFLAGS)"
 	$(MAKE) -C doc/man/guide/tex
 
 override_dh_install:
