Import Debian changes 3.7p3-13
canna (3.7p3-13) unstable; urgency=medium

  * QA upload.
  * debian/control: add texlive-lang-japanese to B-D: to fix FTBFS
    (Closes: #750320).
  * support init.d status
    - debian/control: add canna-utils to canna Depends.
    - debian/init: add status.
  * debian/init: support /lib/lsb/init-functions.
  * debian/libcanna1g.lintian-overrides: remove unused-override.
  * bumped Standards-Version to 3.9.5.

--- a/debian/control
+++ b/debian/control
@@ -3,15 +3,16 @@ Section: utils
 Priority: optional
 Maintainer: Debian QA Group <packages@qa.debian.org>
 Build-Depends: debhelper (>> 7.0.50~), libx11-dev, xutils-dev, po-debconf,
- autoconf2.13, texlive-lang-cjk, texlive-latex-recommended, autotools-dev
-Standards-Version: 3.9.4
+ autoconf2.13, texlive-lang-cjk, texlive-lang-japanese,
+ texlive-latex-recommended, autotools-dev
+Standards-Version: 3.9.5
 Homepage: http://canna.sourceforge.jp/
 Vcs-Git: git://anonscm.debian.org/collab-maint/canna.git
 Vcs-Browser: http://anonscm.debian.org/gitweb/?p=collab-maint/canna.git
 
 Package: canna
 Architecture: any
-Depends: ${misc:Depends}, ${shlibs:Depends}, adduser (>= 3.34)
+Depends: ${misc:Depends}, ${shlibs:Depends}, adduser (>= 3.34), canna-utils
 Suggests: canna-shion
 Description: input system for Japanese - server and dictionary
  Canna provides a unified user interface for Japanese input. It is based
