--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: utils
 Priority: optional
 Maintainer: Debian QA Group <packages@qa.debian.org>
 Build-Depends: debhelper (>> 7.0.50~), libx11-dev, xutils-dev, po-debconf,
- autoconf2.13, texlive-lang-cjk, texlive-lang-japanese,
+ autoconf, texlive-lang-cjk, texlive-lang-japanese,
  texlive-latex-recommended, autotools-dev
 Standards-Version: 3.9.5
 Homepage: http://canna.sourceforge.jp/
